--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://noliss.github.io/pengu-new/",
+  "url": "https://noliss.github.io/pengu-new",
   "name": "TON Pengu",
   "iconUrl": "https://ton.org/download/ton_symbol.png"
 }
