--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://noliq.github.io/pengu-new",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev:https": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -36,6 +39,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "sass": "^1.94.2",
     "typescript": "~5.9.3",
