tgApp and features

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://noliss.github.io/pengu-new",
-  "name": "TON Pengu",
-  "iconUrl": "https://ton.vote/logo.png"
+  "url": "https://noliq.github.io/pengu-new",
+  "name": "Pengu React App",
+  "iconUrl": "https://noliq.github.io/pengu-new/icon.svg"
 }
