--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:https": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "preview": "vite preview"
   },
   "dependencies": {
